<resources>
    <!--    TODO registration-->
    <string name="app_name">Your Receipt</string>
    <string name="you_dont_have_account">you dont have account ?</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="account">Account</string>
    <string name="maype_password_or_email_wrong">Password or email not found</string>
    <!--    TODO account-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="forget_your_password">Forgot your Password ?</string>
    <string name="change_password">Change Password</string>
    <string name="user_name">user name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sotre_name">Store Name</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="config_password">Config Password</string>
    <!--    TODO main-->

    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>

    <string name="add">add</string>
    <string name="delete_all">delete all</string>

    <string name="my_orders">My Orders</string>


    <string name="you_have_account">you have account ?</string>
    <string name="next">next</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="edit_profile">Edit Account</string>

    <string name="privicy">Privacy</string>
    <string name="notification">Notification</string>
    <string name="app_notification" translatable="false">App Notification</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="sale">sale</string>
    <string name="no_result_found">No Result Found</string>
    <string name="quantity">Quantity</string>
    <string name="store_address">Store Address</string>
    <string name="error">error</string>
    <string name="search">Search</string>
    <string name="subject">Subject</string>
    <string name="warning">Warning</string>
    <string name="warning_add_key">Add a key to protect your data To add the key go to settings</string>
    <string name="warning_are_sure">are you sure</string>
    <string name="warning_not_add">Warning The following items have not been added</string>
    <string name="invoice">invoice picture</string>

    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="payment_value">Payment value</string>

    <!--    TODO receipt-->
    <string name="type_receipt">Type Receipt</string>
    <string name="receipt_details">Receipt Details</string>
    <string name="products_receipt">Products Receipt</string>
    <string name="receipt">Receipt</string>
    <string name="number_baylening">number payments</string>
    <string name="date_of_payment">date of payment</string>
    <string name="state">state</string>
    <!--    TODO client-->
    <string name="client_name">Client Name</string>
    <string name="client_chice">client choice</string>
    <string name="add_client">Add Client</string>
    <string name="client_phone">Client Phone</string>
    <string name="add_new_client">Add Client</string>
    <string name="speed_add">Quick add</string>
    <string name="create_client">Create new Client</string>
    <string name="client">Client</string>
    <!--    TODO items-->
    <string name="add_item">Add Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="create_item">Create new Item</string>
    <string name="items">Items</string>
    <string name="choice_items">Products Choice</string>

    <string name="title">Title</string>
    <string name="total">Total</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="discount">Discount</string>
    <string name="take" translatable="false">take</string>
    <string name="dues" translatable="false">dues</string>
    <string name="more">More</string>
    <string name="note">Note</string>
    <string name="add_logo">Add Logo</string>
    <string name="print">Print</string>
    <string name="products">Products</string>
    <string name="product">Product</string>
    <string name="create_product">Add new product</string>
    <string name="discount_total_all">Discount Total All</string>
    <string name="tax">Tax</string>
    <string name="add_info">Additional Information</string>
    <string name="tax_exempt">Tax Exempt</string>
    <string name="address">Address</string>
    <string name="hide">Hide</string>
    <string name="total_all">Total All: </string>
    <string name="greater_than_total">The amount is greater than the grand total</string>

    <string name="delete">Delete</string>
    <string name="skip">skip</string>

    <string name="contact_by_whatsapp_or_call">To active your account contact us by whats app or phone call</string>
    <string name="sign_in_with_another_account">Sign In with another account</string>
    <string name="whats_app">Whats App</string>
    <string name="phone_call">Phone Call</string>
    <string name="my_phone_num" translatable="false">0782317354</string>
    <string name="or">OR</string>
    <string name="create_store">create store</string>
    <string name="edit_store">Edit Store</string>
    <string name="address_2">Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="text_some_things">search</string>
    <string name="camera">camera</string>
    <string name="phone_pictures">phone pictures</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="please_confirm">plase confirm</string>
    <string name="edit_security_number">Edit security number</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--    help-->
    <string name="help_client">Click on the card to add customer information
Click on the pen to edit the customer</string>
    <string name="help_item_product">To add a product, click on Add Items at the top of the screen and add

1- Quantity
2- Price
3- Discount
4- Tax

Or add all items</string>
    <string name="add_new_receipt">add new receipt</string>
    <string name="paid">paid</string>
    <string name="not_paid">Unpaid</string>
    <string name="debt">debt</string>
    <string name="bayment">bayment</string>
    <string name="store">store</string>
    <!--error-->
    <string name="error_input_charcter">Enter numbers only</string>
    <string name="network_conecction">Check if network connect</string>
    <!--handle message-->
    <string name="success">Success</string>
    <string name="email_long">Email is to long</string>
    <string name="email_short">Email is to short</string>
    <string name="email_epty">Empty email</string>
    <string name="email_unacceptable">Unacceptable email</string>

    <string name="password_long">Password is to long</string>
    <string name="password_short">Password is to short</string>
    <string name="security_short">Security number is too short</string>
    <string name="security_error">Security number is too short</string>
    <string name="empty_password">Empty password</string>


    <string name="try_again">Try Again</string>
    <string name="not_exists">Not exists</string>
    <string name="active_your_account">Please active your account</string>
    <string name="we_send_email">We have sent you a confirmation email</string>
    <string name="forget_security_number">Click if you forget security number</string>

    <string name="check_email">Check your email the to recover password in it</string>
    <string name="exempt">exempt</string>
    <string name="unexempt">Unexempt</string>
    <string name="increase_quntity">Do you want to increase the quantity ?</string>
    <string name="quantity_is_greater">Quantity is greater than what is available</string>
    <string name="security">Security number</string>
    <string name="security_success_change">The security key has been changed</string>
    <string name="add_security">Add security number</string>
    <string name="location_visible_security">Security key appears</string>
    <string name="dont_have_number_security">You don\'t have Security number</string>
    <string name="dont_show">Don\'t show again</string>
    <string name="show_box_security_number">Appear every time</string>
    <string name="wrong_security_number">Wrong security code</string>
    <string name="help">help</string>
    <string name="arabic_lang" translatable="false">العربية</string>
    <string name="englush_lang">englush</string>
</resources>