<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="soft.mahmod.yourreceipt.model.Products" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        tools:context=".view_fragment.add_receipt.add_products.FragmentAddProducts">

        <EditText
            android:id="@+id/edt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_stork"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:padding="@dimen/_12sdp"
            android:text="@{String.valueOf(model.price)}"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/edt_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_stork"
            android:layout_marginVertical="@dimen/_8sdp"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:padding="@dimen/_12sdp"
            android:text="@{String.valueOf(model.quantity)}"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/edt_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_stork"
            android:hint="@string/discount"
            android:inputType="numberDecimal"

            android:padding="@dimen/_12sdp"
            android:text="@{String.valueOf(model.discount)}"
            android:textColor="@color/text_color" />

        <EditText
            android:id="@+id/edt_tax"
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_stork"
            android:hint="@string/tax"
            android:inputType="numberDecimal"
            android:padding="@dimen/_12sdp"
            android:text="@{String.valueOf(model.tax)}"
            android:textColor="@color/text_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_down"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="@dimen/_12sdp"
            android:backgroundTint="@color/top_and_bottom_color"
            android:text="@string/ok"
            android:textColor="@color/text_btn_color" />

    </LinearLayout>
</layout>