<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_stork"
            android:textColorHint="@color/hint_color"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_stork"
            android:hint="@string/price"
            android:textColorHint="@color/hint_color"
            android:inputType="numberDecimal"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/custom_stork"
            android:hint="@string/quantity"
            android:textColorHint="@color/hint_color"
            android:inputType="numberDecimal"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tax"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/custom_stork"
            android:hint="@string/tax"
            android:textColorHint="@color/hint_color"
            android:inputType="numberDecimal"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/text_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_down"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="@dimen/_12sdp"
            android:backgroundTint="@color/top_and_bottom_color"
            android:text="@string/ok"
            android:textColor="@color/text_btn_color" />

    </LinearLayout>
</layout>