<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="soft.mahmod.yourreceipt.model.billing.Payment" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_page"
        android:layout_marginVertical="@dimen/_8sdp">

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_delete_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/design_default_color_error" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />

        <LinearLayout
            android:id="@+id/linearLayout18"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/custom_stork"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete">

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@{String.valueOf(model.price)}"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:hint="@string/payment_value"
                android:textColorHint="@color/hint_color"
                android:gravity="center_horizontal"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/edit_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:inputType="date"
                android:maxLength="10"
                android:maxLines="1"
                android:hint="@string/date"
                android:textColorHint="@color/hint_color"
                android:gravity="center"
                android:text="@{model.date}"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_paid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_weight="2"
                android:checked='@{model.paid}'
                android:textOff="@string/paid"
                android:textOn="@string/not_paid" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_down"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="@dimen/_8sdp"
            android:backgroundTint="@color/top_and_bottom_color"
            android:text="@string/ok"
            android:textColor="@color/text_btn_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout18" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>