<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/background_page"
        android:layout_height="match_parent"
        tools:context=".view_fragment.registration.FragmentActive">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:text="@string/contact_by_whatsapp_or_call"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@+id/btn_whtsapp"
            app:layout_constraintEnd_toEndOf="@+id/btn_whtsapp"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="@+id/btn_whtsapp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_whtsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whats_app"
            app:backgroundTint="@color/icon_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.878"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.519" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_phone_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/phone_call"
            app:backgroundTint="@color/icon_color"
            app:layout_constraintBottom_toBottomOf="@+id/btn_whtsapp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_whtsapp"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>